--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Who am I?</title>
+    <title>Learn Enough to Be Dangerous</title>
     <meta charset="utf-8">
   </head>
   <body>
-    Jean Valjean<br>
-    55 Rue Plumet<br>
-    Amonate, VA 24601
+   <h1>The Learn Enough Story</h1>
+    <h2>Background</h2>
+    <h3>Founders</h3>
+    <h4>Michael Hartl</h4>
+    <h5>Lee Donahoe</h5>
+    <h6>Nick Merwin</h6>
+    <h7>Nick</h7>
+    <h8>Merwin</h8>
+    <h9>NickMerwin</h9>
+    <h10>NM</h10>
   </body>
 </html>
