--- a/index.html
+++ b/index.html
@@ -46,6 +46,10 @@
       <strong>at least a billion people</strong>, and probably more.
     </p>
     <h3>Michael Hartl</h3>
+
+    <img src="https://gravatar.com/avatar/ffda7d145b83c4b118f982401f962ca6?s=150"
+     alt="Michael Hartl">
+
     <p>
       Michael is the creator of the <a href="http://railstutorial.org/">
       Ruby on Rails Tutorial</a> and principal author of the
@@ -60,6 +64,10 @@
       <a target="_blank"href="http://twitter.com/mhartl">here</a>.
     </p>
     <h3>Lee Donahoe</h3>
+
+    <img src="https://gravatar.com/avatar/b65522a6f3a6899705d119d7aa232a6d?s=150"
+     alt="Lee Donahoe">
+
     <p>
       When he's not literally swimming with sharks or hunting powder stashes
       on his snowboard, you can find Lee in front of his computer designing
@@ -71,7 +79,11 @@
       <a target="_blank"href="https://twitter.com/leedonahoe">here</a>.
     </p>
     <h3>Nick Merwin</h3>
-    <p>
+
+    <img src="https://gravatar.com/avatar/e2d6ce2ba5c1b6d674ae8ff2b3b45d23?s=150"
+     alt="Nick Merwin">
+
+     <p>
       You may have seen him shredding guitar live with Capital Cities on Jimmy
       Kimmel, Conan, or The Ellen Show, but rest assured Nick is a true nerd
       at heart. He's just as happy shredding well-spec'd lines of code from a
