--- a/index.html
+++ b/index.html
@@ -17,15 +17,24 @@
       movement, <a href="http://learnenough.com/email">sign up for our official email list</a> now.
     </p>
     <p>
+      <a href="http://twitter.com/learnenough" target="_blank"
+      style="text-decoration: none;">
+        <img src="images\small_twitter_logo.png">
+      </a>
+      You should follow Learn Enough on Twitter
+      <a href="http://twitter.com/learnenough" target="_blank">here</a>.
+    </p>
+    <p>
       HTML was created by the original "web developer", computer scientist
       <a href="https://en.wikipedia.org/wiki/Tim_Berners-Lee">Tim
       Berners-Lee</a>. It's not true that Sir Tim invented HTML in order to
       share pictures of his cat, but it would be cool if it were.
     </p>
 
+    <a href="https://learnenough.github.io/sample_website/images/kitten.jpg">
      <img src="images/kitten.jpg" alt="An adorable kitten">
-    <h2>Background</h2>
-    
+   </a>
+
     <p>
       Learn Enough to Be Dangerous is an outgrowth of the
       <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a> and the
@@ -61,7 +70,7 @@
     </p>
     <p>
       You should follow Michael on Twitter
-      <a target="_blank" href="http://twitter.com/mhartl">here</a>.
+      <a href="http://twitter.com/mhartl" target="_blank">here</a>.
     </p>
     <h3>Lee Donahoe</h3>
 
@@ -76,7 +85,7 @@
     </p>
      <p>
       You should follow Lee on Twitter
-      <a target="_blank" href="https://twitter.com/leedonahoe">here</a>.
+      <a href="https://twitter.com/leedonahoe" target="_blank">here</a>.
     </p>
     <h3>Nick Merwin</h3>
 
@@ -91,7 +100,7 @@
     </p>
     <p>
       You should follow Nick on Twitter
-      <a target="_blank" href="https://twitter.com/nickmerwin">here</a>.
+      <a href="https://twitter.com/nickmerwin" target="_blank">here</a>.
     </p>
   </body>
 </html>
