--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>Learn Enough to Be Dangerous</title>
     <meta charset="utf-8">
   </head>
   <body>
+
+    <div>
+      <a href="index.html">Home</a>
+      <a href="tags.html">HTML Tags</a>
+      <a href="moby_dick.html">Moby Dick</a>
+    </div>
+
    <h1>The Learn Enough Story</h1>
     <p>
       Learn Enough to Be Dangerous is a leader in the movement to teach
@@ -19,7 +26,7 @@
     <p>
       <a href="http://twitter.com/learnenough" target="_blank"
       style="text-decoration: none;">
-        <img src="images\small_twitter_logo.png">
+        <img src="images/small_twitter_logo.png" alt="Twitter Logo">
       </a>
       You should follow Learn Enough on Twitter
       <a href="http://twitter.com/learnenough" target="_blank">here</a>.
