--- a/tags.html
+++ b/tags.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>HTML Tags</title>
     <meta charset="utf-8">
   </head>
   <body>
 
+    <div>
+      <a href="index.html">Home</a>
+      <a href="tags.html">HTML Tags</a>
+      <a href="moby_dick.html">Moby Dick</a>
+    </div>
     <h1>Important HTML tags</h1>
 
     <a href="https://www.flickr.com/photos/jdhancock/3814523970">
@@ -24,9 +29,7 @@
       The tables below don't include all HTML tags, but they do list many of
       the most important ones.
     </p>
-
     <h2>Block Elements</h2>
-
     <table>
       <tr>
         <th>Tag</th>
@@ -64,9 +67,7 @@
         <td>include a table data cell</td>
       </tr>
     </table>
-
     <h2>Inline Elements</h2>
-
     <table>
       <tr>
         <th>Tag</th>
@@ -81,7 +82,6 @@
         <td>make emphasized text</td>
         <td><code>&lt;em&gt;technical sophistication&lt;/em&gt;</code></td>
         <td><em>technical sophistication</em></td>
-      </td>
     <tr>
       <td><code>strong</code></td>
       <td>strong</td>
@@ -114,7 +114,5 @@
       <td><img src="https://bit.ly/1MZAFuQ" alt="Michael Hartl"></td>
     </tr>
   </table>
-      </tr>
-    </table>
   </body>
 </html>
