Finish the sample website

--- a/index.html
+++ b/index.html
@@ -6,11 +6,17 @@
   </head>
   <body>
 
-    <div>
-      <a href="index.html">Home</a>
-      <a href="tags.html">HTML Tags</a>
-      <a href="moby_dick.html">Moby Dick</a>
+    <div style="text-align: right;">
+      <a href="index.html" style=text-decoration:none; >Home</a>
+      <a href="tags.html" style="text-decoration:none; margin-left: 10px;">HTML Tags</a>
+      <a href="moby_dick.html" style="text-decoration:none; margin: 0 0 0 10px;">Moby Dick</a>
     </div>
+    <p>
+      <strong> by Nichole Leonard</strong>
+    </p>
+
+    <img src="images/nichole_wings.jpg" alt="Nichole Wings" width="256"
+      style="display: block;">
 
    <h1>The Learn Enough Story</h1>
     <p>
@@ -41,6 +47,21 @@
     <a href="https://learnenough.github.io/sample_website/images/kitten.jpg">
      <img src="images/kitten.jpg" alt="An adorable kitten">
    </a>
+
+   <h1>Quotations</H1>
+
+       <p>
+         In addition to hosting most of the world's supply of kitten videos, the
+         Web is also full of inspiring quotes, perhaps none more so than this one:
+       </p>
+
+       <blockquote style="padding: 2px 20px; background:  #fafafa;">
+         <p>
+           <em>Don't believe every quote you read on the Internet.</em>
+           <br>
+           —Abraham Lincoln
+         </p>
+       </blockquote>
 
     <p>
       Learn Enough to Be Dangerous is an outgrowth of the
