--- a/tags.html
+++ b/tags.html
@@ -5,18 +5,18 @@
     <meta charset="utf-8">
   </head>
   <body>
-
-    <div>
-      <a href="index.html">Home</a>
-      <a href="tags.html">HTML Tags</a>
-      <a href="moby_dick.html">Moby Dick</a>
+    <div style="text-align: right;">
+      <a href="index.html" style=text-decoration:none; >Home</a>
+      <a href="tags.html" style="text-decoration:none; margin-left: 10px;">HTML Tags</a>
+      <a href="moby_dick.html" style="text-decoration:none; margin: 0 0 0 10px;">Moby Dick</a>
     </div>
+    <header>
     <h1>Important HTML tags</h1>
-
+  </header>
     <a href="https://www.flickr.com/photos/jdhancock/3814523970">
       <img src="images/storm_trooper_tagged.jpg" alt="Tagged Storm Trooper">
     </a>
-
+    <div>
     <p>
       This page is designed as a quick reference for some of the common tags
       covered in <a href="http://learnenough.com/html-tutorial"><em>Learn
@@ -24,7 +24,7 @@
       learn how to make HTML <em>tables</em> via <code>table</code> and
       related tags.
     </p>
-
+  </div>
     <p>
       The tables below don't include all HTML tags, but they do list many of
       the most important ones.
