--- a/moby_dick.html
+++ b/moby_dick.html
@@ -5,20 +5,18 @@
     <meta charset="utf-8">
   </head>
   <body>
-    <div>
-         <a href="index.html">Home</a>
-         <a href="tags.html">HTML Tags</a>
-         <a href="moby_dick.html">Moby Dick</a>
-
+    <div style="text-align: right;">
+      <a href="index.html" style=text-decoration:none; >Home</a>
+      <a href="tags.html" style="text-decoration:none; margin-left: 10px;">HTML Tags</a>
+      <a href="moby_dick.html" style="text-decoration:none; margin: 0 0 0 10px;">Moby Dick</a>
     </div>
 
-    <!-- much here to be styled, will do so in last section -->
-    <header>
-      <h1>A Softcover Book Report</h1>
-      <h2>Moby-Dick (or, The Whale)</h2>
+    <header style="text-align: center; margin: 0 0 40px;">
+      <h1 style="text-align: center;">A Softcover Book Report</h1>
+      <h2 style="text-align: center;">Moby-Dick (or, The Whale)</h2>
     </header>
 
-    <div>
+    <div style="width: 640px; margin: 10px auto;">
       <p>
         The <a href="http://www.softcover.io/">Softcover</a> publishing platform
         was designed mainly for ebooks like the
@@ -33,16 +31,19 @@
     </div>
 
     <a href="https://commons.wikimedia.org/wiki/File:Sperm_whale_pod.jpg">
-      <img src="images/sperm_whales.jpg" alt="Sperm Whales">
+      <img src="images/sperm_whales.jpg" alt="Sperm Whales"
+      style="display: block; margin: 0 auto;">
     </a>
 
-    <div>
+    <div style="width: 500px; margin: 20px auto; padding: 30px;
+    background-color: #fafafa;">
 
       <h3>Moby-Dick: A classic tale of the sea</h3>
 
       <a href="https://www.softcover.io/read/6070fb03/moby-dick"
          target="_blank">
-        <img src="images/moby_dick.png" alt="Moby Dick">
+         <img src="images/moby_dick.png" alt="Moby Dick" height="200"
+         style="float: left; margin:  0 40px 0 0;">
       </a>
 
       <p>
@@ -52,24 +53,25 @@
           by Herman Melville begins with these immortal words:
       </p>
 
-      <blockquote>
+      <blockquote style="font-style: italic; font-size: 20px;">
         <p>
-          <span>Call me Ishmael.</span> Some years ago–never mind how long
+          <span style="font-style: normal; font-size: 24px; font-weight: bold;
+color: #ff0000;">Call me Ishmael.</span> Some years ago–never mind how long
           precisely–having little or no money in my purse, and nothing
           particular to interest me on shore, I thought I would sail about a
           little and see the watery part of the world. It is a way I have of
           driving off the spleen and regulating the circulation.
         </p>
       </blockquote>
-
       <p>
         After driving off his spleen (which <em>can't</em> be good for you),
         Ishmael then goes on in much the same vein for approximately one
         jillion pages. The only thing bigger than Moby Dick (who—<em>spoiler
         alert!</em>—is a giant white whale) is the book itself.
       </p>
-    </div>
+
     <h4>Our top 3 favorite things about Moby Dick</h4>
+
     <ol>
       <li>Vengeful whale</li>
       <li>Salty sailors</li>
@@ -77,6 +79,7 @@
     </ol>
 
     <h4>Other things about Moby Dick</h4>
+
     <ul>
       <li>
         Chapter after chapter (after chapter) of meticulous detail about
@@ -89,6 +92,6 @@
             </li>
             <li>Mad sea captains are fun</li>
           </ul>
-        </div>
-      </body>
-    </html>
+      </div>
+  </body>
+</html>
