--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <p>
       <strong> by Nichole Leonard</strong>
     </p>
-
+    <a href="https://learnenough.github.io/sample_website/images/nichole_wings.jpg">
     <img src="images/nichole_wings.jpg" alt="Nichole Wings" width="256"
       style="display: block;">
-
+    </a>
    <h1>The Learn Enough Story</h1>
     <p>
       Learn Enough to Be Dangerous is a leader in the movement to teach
