--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <strong> by Nichole Leonard</strong>
     </p>
     
-    <img src="ihttps://learnenough.github.io/sample_website/images/nichole_wings.jpg" alt="Nichole Wings" width="256"
+    <img src="images/nichole_wings.jpg" alt="Nichole Wings" width="256"
       style="display: block;">
  
    <h1>The Learn Enough Story</h1>
