Change image path

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <strong> by Nichole Leonard</strong>
     </p>
 
-    <img src="images/nichole_wings.jpg" alt="Nichole Wings" width="256"
+    <img src="https://github.com/snowdaze03/sample_website/blob/master/images/nichole_wings.JPG" alt="Nichole Wings" width="256"
       style="display: block;">
 
    <h1>The Learn Enough Story</h1>
