Add changes to image path

--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
       <strong> by Nichole Leonard</strong>
     </p>
 
-    <img src="https://github.com/snowdaze03/sample_website/blob/master/images/nichole_wings.JPG" alt="Nichole Wings" width="256"
+    <a href="https://github.com/snowdaze03/sample_website/blob/master/images/nichole_wings.JPG">
+    <img src="images/nichole_wings.JPG" alt="Nichole Wings" width="256"
       style="display: block;">
+    </a>
 
    <h1>The Learn Enough Story</h1>
     <p>
